try fix edit covered 2

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -87,7 +87,6 @@
 .edit {
   width: 100%;
   height: 32px;
-  padding-top: 5px;
   padding-left: 40px;
   border-top-color: #e5e5e5;
   border-top-style: dashed;
@@ -100,7 +99,7 @@
 .edit-add {
   height: 16px;
   width: 16px;
-  margin-top: 3px;
+  margin-top: 7px;
   margin-right: 8px;
   z-index: 2;
 }
@@ -109,7 +108,7 @@
   width: 80%;
   height: 20px;
   margin-left: -10px;
-  margin-top: 0px;
+  margin-top: 4px;
   border-width: 0px;
   box-shadow:#f6f6f6;
   color: #d2d6da;
